# krypto_checker

./: Cargo.toml  Makefile
api/: Cargo.toml
api/src/: main.rs
checker/: Cargo.toml
checker/src/: lib.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/routes/: +layout.svelte  +page.svelte  BlurredBox.svelte  NumberCard.svelte  WidthBasedBox.svelte  game.ts  style.css
src/: main.rs
