[package]
name = "krypto_api"
version = "0.1.0"
edition = "2021"


# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.80"
lambda_http = "0.9.3"
krypto_checker = { path = "../checker" }

tokio = { version = "1.36.0", features = ["macros"] }
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
axum = { version = "0.7.4", features = ["macros"] }
axum-aws-lambda = "0.6.0"
